@@ -1,3 +1,6 @@
+Thu 11 Nov 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Rename Opponent as Friend
+
 wed 29 Sep 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Update Node.js to 12.22.6
 
